src/test/ui/issues/issue-17458.stderr
error[E0658]: casting pointers to integers in statics is unstable
  --> $DIR/issue-17458.rs:1:28
   |
LL | static X: usize = unsafe { core::ptr::null::<usize>() as usize };
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #51910 <https://github.com/rust-lang/rust/issues/51910> for more information
   = help: add `#![feature(const_raw_ptr_to_usize_cast)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
